--- a/store.html
+++ b/store.html
@@ -2,52 +2,167 @@
 <html lang="en" class="no-js">
 
 <head>
-    <?php include "_/php_includes/head_1.php";?>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <!--Facebook Meta Data -->
-    <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
-    <!--<meta property="og:type" content="article" />-->
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image" content="http://www.tiafaupurcell.me/img/fb_metadata_store.jpg" /><!--insert image 1200x630-->
-    <meta property="og:image:width" content="2000"/><!--min 1200px-->
-    <meta property="og:image:height" content="1050"/><!--min 630px-->
-    <meta property="og:url" content="http://www.tiafaupurcell.me/store.php" />
-    <meta property="og:description" content="Swag and free downloads coming soon."/>
+  <!--Facebook Meta Data -->
+  <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
+  <!--<meta property="og:type" content="article" />-->
+  <meta property="og:image:type" content="image/jpeg"/>
+  <meta property="og:image" content="http://tiafaupurcell.github.io/img/fb_metadata_store.jpg" /><!--insert image 1200x630-->
+  <meta property="og:image:width" content="2000"/><!--min 1200px-->
+  <meta property="og:image:height" content="1050"/><!--min 630px-->
+  <meta property="og:url" content="http://tiafaupurcell.github.io/store.html" />
+  <meta property="og:description" content="Swag and free downloads coming soon."/>
 
-    <?php include "_/php_includes/head_2.php";?>
+  <!-- Bootstrap Core CSS -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <title>Store | User Experience &amp; Interaction Designer</title>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- Third Party CSS -->
+  <link rel="stylesheet" type="text/css" src="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+  <link rel="stylesheet" type="text/css" href="css/animate.css"/>
+
+  <!-- Custom Fonts -->
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="text/css" href="img/favicon.ico"/>
+
+  <title>Store | User Experience &amp; Interaction Designer</title>
 </head>
 
 <body id="about">
+  <header>
+  	<nav id="pages-nav" class="animated bounceInDown">
+      <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+      </div>
+  	</nav>
+  </header>
 
-    <?php include "_/php_includes/pages_nav.php";?>
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/shop_soon_icon.svg" class="img-responsive">
+  		</div>
+  	</div>
+  </section>
 
-    <section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/shop_soon_icon.svg" class="img-responsive">
-    		</div>
-    	</div>
-    </section>
+  <section class="section-main blue_a section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h1>Store</h1>
+  			<p>Swag and free downloads coming soon.</p>
+  			<img src="img/store_main.png" class="img-responsive">
+  			<div class="caption">Cool stuff coming soon.</div>
+  		</div>
+  	</div>
+  </section>
 
-    <section class="section-main blue_a section-img">
-    	<div class="container animated fadeIn">
-    		<div class="row text-center">
-    			<h1>Store</h1>
-    			<p>Swag and free downloads coming soon.</p>
-    			<img src="img/store_main.png" class="img-responsive">
-    			<div class="caption">Cool stuff coming soon.</div>
-    		</div>
-    	</div>
-    </section>
+  <section class="section-margin bg-light-gray section-img blue_a">
+    <div class="container animated fadeIn">
+      <div class="row text-center">
+        <h2>Prints</h2>
+        <div class="p2">Here are some prints for your enjoyment!</div>
 
-    <?php include "_/php_includes/store_prints.php";?>
-    <?php include "_/php_includes/store_squarecash.php";?>
+        <div class="col-md-12">
+          <img src="img/store_2.jpg" class="img-responsive border-img">
+          <div class="logo_center caption">Dent in the Universe ($25)</div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <?php include "_/php_includes/pages_footer.php";?>
+  <section class="section-margin section-img blue_a">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Square Cash</h2>
+  			<div class="p2"><a href="https://cash.me/" target="_blank">Square Cash</a> is an application that allows you to exchange money quickly, easily, and for free. Feel free to test it out with my $Cashtag at <a href="https://cash.me/$tiafaupurcell" target="_blank">$tiafaupurcell</a> :)
+  				This is how I will handle donations for any free downloads in my store.</div>
 
-<?php include "_/php_includes/scripts.php";?>
+  			<div class="col-md-12">
+  				<img src="img/store_1.jpg" class="img-responsive">
+  				<div class="logo_center caption">My Square Cash $Cashtag page (<a href="https://cash.me/$tiafaupurcell" target="_blank">$tiafaupurcell</a>)</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <div class="footer">
+  	<nav id="pages-footer" class="animated fadeIn">
+	    <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="copy">&copy; 2016</div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+	    </div>
+  	</nav>
+  </div>
+
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <!-- Bootstrap Core JS -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+  <!-- Third Party JS -->
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+  <!-- Contact Form JavaScript -->
+  <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+  <script type="text/javascript" src="js/contact_me.js"></script>
+
+  <!-- Custom JS -->
+  <script type="text/javascript" src="js/scripts.js"></script>
+
+  <!-- clock time from http://www.ricocheting.com/code/javascript/html-generator/date-time-clock -->
+  <script type="text/javascript">
+
+  	function GetClock(){
+  	d = new Date();
+  	nhour  = d.getHours();
+  	nmin   = d.getMinutes();
+  	     if(nhour ==  0) {ap = " AM";nhour = 12;}
+  	else if(nhour <= 11) {ap = " AM";}
+  	else if(nhour == 12) {ap = " PM";}
+  	else if(nhour >= 13) {ap = " PM";nhour -= 12;}
+
+  	if(nmin <= 9) {nmin = "0" +nmin;}
+
+
+  	document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+ap+"";
+  	setTimeout("GetClock()", 1000);
+  	}
+  	window.onload=GetClock;
+
+  </script>
+
+  <!-- Google Analytics -->
+  <script>
+
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-44209755-1', 'auto');
+  	ga('send', 'pageview');
+
+  </script>
 
 </body>
 </html>
