--- a/ventures.html
+++ b/ventures.html
@@ -2,74 +2,249 @@
 <html lang="en" class="no-js">
 
 <head>
-    <?php include "_/php_includes/head_1.php";?>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <!--Facebook Meta Data -->
-    <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
-    <!--<meta property="og:type" content="article" />-->
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image" content="http://www.tiafaupurcell.me/img/fb_metadata_projects.jpg" /><!--insert image 1200x630-->
-    <meta property="og:image:width" content="2000"/><!--min 1200px-->
-    <meta property="og:image:height" content="1050"/><!--min 630px-->
-    <meta property="og:url" content="http://www.tiafaupurcell.me/projects.php" />
-    <meta property="og:description" content="Welcome to my ventures. These projects are definitely an undertaking involving uncertainty, but that's what I love about it. I enjoy coming up with solutions to problems that can be solved with design and technology."/>
+  <!--Facebook Meta Data -->
+  <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
+  <!--<meta property="og:type" content="article" />-->
+  <meta property="og:image:type" content="image/jpeg"/>
+  <meta property="og:image" content="http://tiafaupurcell.github.io/img/fb_metadata_projects.jpg" /><!--insert image 1200x630-->
+  <meta property="og:image:width" content="2000"/><!--min 1200px-->
+  <meta property="og:image:height" content="1050"/><!--min 630px-->
+  <meta property="og:url" content="http://tiafaupurcell.github.io/projects.html" />
+  <meta property="og:description" content="Welcome to my ventures. These projects are definitely an undertaking involving uncertainty, but that's what I love about it. I enjoy coming up with solutions to problems that can be solved with design and technology."/>
 
-    <?php include "_/php_includes/head_2.php";?>
+  <!-- Bootstrap Core CSS -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <title>Ventures | User Experience &amp; Interaction Designer</title>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- Third Party CSS -->
+  <link rel="stylesheet" type="text/css" src="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+  <link rel="stylesheet" type="text/css" href="css/animate.css"/>
+
+  <!-- Custom Fonts -->
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="text/css" href="img/favicon.ico"/>
+
+  <title>Ventures | User Experience &amp; Interaction Designer</title>
 </head>
 
 <body id="about">
+  <header>
+  	<nav id="pages-nav" class="animated bounceInDown">
+      <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+      </div>
+  	</nav>
+  </header>
 
-    <?php include "_/php_includes/pages_nav.php";?>
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/projects_icon.svg" class="img-responsive">
+  		</div>
+  	</div>
+  </section>
 
-    <section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/projects_icon.svg" class="img-responsive">
-    		</div>
+  <section class="section-main blue_a section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h1>Ventures</h1>
+  			<p>These <a href="http://dictionary.reference.com/browse/venture" target="_blank">ventures</a> are definitely an <em>undertaking involving uncertainty</em>, but
+  				that's what I love about ventures. I enjoy coming up with solutions to problems that can be solved with design and technology. Steve Jobs said, "We're here
+                  to put a dent in the universe." I try to make dents with ventures.</p>
+  			<img src="img/projects_main.png" class="img-responsive">
+              <div class="caption">A few of the tools in my toolbox.</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section_detail blue_a section-margin bg-light-gray section-img">
+    <div class="container animated fadeIn">
+      <div class="row text-center">
+        <h2>Verdad Technologies</h2>
+        <div class="p2">My latest venture is one I'm super proud of. On June 15, 2015, we officially became a company. As one of twelve founding engineers, I get to work with an incredible team
+          all striving towards one goal &mdash; creating impact. We love solving complex problems through technology. We also incubate products and pair them with people who share our same vision. <a href="work.html#verdadtech">Check out</a> some
+          of the projects I'm currently working on.
+        </div>
+
+        <div class="col-md-12">
+          <img src="img/projects_15.jpg" class="img-responsive border-img">
+          <!-- <div class="logo_center caption">Home Page</div> -->
+
+          <div class="caption">
+            <div>Verdad Technologies</div>
+            <div><span>Date:</span> 2015</div>
+            <div><span>Role:</span> Design Engineer, Founding Engineer</div>
+            <!-- <div><span>Tools:</span>Adobe Ps &amp; Ai, Sketch 3</div> -->
+            <div><span>URL:</span> <a href="http://verdadtech.com/" target="_blank">www.verdadtech.com</a></div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section_detail blue_a section-margin section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Sweep the Earth</h2>
+  			<div class="p2">Sweep the Earth is a venture that was born from one of the core principles that we live by at Verdad Tech &mdash; innovation. At the end of 2014, a friend and I were brainstorming ideas that we could work on together. We eventually came up with a web app much like <a href="http://startupquote.com/" target="_blank">StartupQuote.com</a>,
+  				but instead of startup quotes, we did photo quotes related to the LDS Community. Verdad Tech allows us to innovate on ideas such as Sweep the Earth. <a href="https://medium.com/@tiafau.purcell/design-to-do-good-eb148a806109" target="_blank">Read more</a> about how it all started.
+  			</div>
+
+  			<div class="col-md-12">
+  				<img src="img/projects_1.png" class="img-responsive border-img">
+  				<div class="logo_center caption">Home Page</div>
+
+  				<img src="img/projects_2.png" class="img-responsive border-img">
+  				<div class="logo_center caption">Quotes Page &mdash; Search by keyword, author, or category.</div>
+
+  				<!-- <img src="img/projects_3.png" class="img-responsive border-img">
+  				<div class="logo_center caption">Quotes Page &mdash; Share photo quote on social media.</div>
+
+  				<img src="img/projects_4.png" class="img-responsive border-img">
+  				<div class="logo_center caption">About Page</div>
+
+  				<img src="img/projects_5.png" class="img-responsive border-img">
+  				<div class="logo_center caption">Mission Page</div>
+
+  				<img src="img/projects_6.png" class="img-responsive border-img">
+  				<div class="logo_center caption">Submit Quote Page &mdash; Submit a quote you want to share with the world.</div> -->
+
+  				<div class="caption">
+  					<div>Sweep the Earth</div>
+  					<div><span>Date:</span> 2015</div>
+  					<div><span>Role:</span> Designer, Co-founder</div>
+  					<div><span>Tools:</span>Adobe Ps &amp; Ai, Sketch 3</div>
+  					<div><span>URL:</span> <a href="http://www.sweeptheearth.me/" target="_blank">www.sweeptheearth.me</a></div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section_detail blue_a section-margin bg-light-gray section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Join the Team</h2>
+  			<div class="p2">My full-time work, venture, and passion is Verdad Tech. We're always looking for bright minds and people who want to make an impact in the world.
+  				If you are interested in joining us, you can reach me via one of the methods below.
+  			</div>
+
+  			<div class="col-md-12">
+  				<div class="col-md-3 col-sm-3 col-xs-3">
+  					<a href="mailto:tiafaupurcell03@gmail.com?subject=Verdad&body=I want to join Verdad!" target="_blank"><img src="img/gmail_icon.png" class="img-responsive border"></a>
+  				</div>
+  				<div class="col-md-3 col-sm-3 col-xs-3">
+  					<a href="messages.html"><img src="img/messages_icon.svg" class="img-responsive"></a>
+  				</div>
+  				<div class="col-md-3 col-sm-3 col-xs-3">
+  					<a href="https://plus.google.com/105412208131448973310/" target="_blank"><img src="img/hangouts_icon.png" class="img-responsive border"></a>
+  				</div>
+  				<div class="col-md-3 col-sm-3 col-xs-3">
+  					<a href="slack.html"><img src="img/slack_icon.png" class="img-responsive"></a>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/projects_icon.svg" class="img-responsive border">
+  		</div>
+  	</div>
+  </section>
+
+  <section class="blue_a">
+    <div class="container animated fadeIn section-img">
+    	<div class="row text-center">
+    		<h2>Project Complete</h2>
+    		<div class="p2">Check back for updates.</div>
+    		<img src="img/projects_main2.png" class="img-responsive">
     	</div>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-main blue_a section-img">
-    	<div class="container animated fadeIn">
-    		<div class="row text-center">
-    			<h1>Ventures</h1>
-    			<p>These <a href="http://dictionary.reference.com/browse/venture" target="_blank">ventures</a> are definitely an <em>undertaking involving uncertainty</em>, but 
-    				that's what I love about ventures. I enjoy coming up with solutions to problems that can be solved with design and technology. Steve Jobs said, "We're here 
-                    to put a dent in the universe." I try to make dents with ventures.</p>
-    			<img src="img/projects_main.png" class="img-responsive">
-                <div class="caption">A few of the tools in my toolbox.</div>
-    		</div>
-    	</div>
-    </section>
+  <div class="footer">
+  	<nav id="pages-footer" class="animated fadeIn">
+	    <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="copy">&copy; 2016</div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+	    </div>
+  	</nav>
+  </div>
 
-    <?php include "_/php_includes/ventures_verdad.php";?>
-	<?php include "_/php_includes/ventures_ste.php";?>
-	<?php /* include "_/php_includes/ventures_foundation.php"; */?>
-	<?php include "_/php_includes/ventures_misc.php";?>
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-	<section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/projects_icon.svg" class="img-responsive border">
-    		</div>
-    	</div>
-    </section>
+  <!-- Bootstrap Core JS -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-	<section class="blue_a">
-		<div class="container animated fadeIn section-img">
-			<div class="row text-center">
-				<h2>Project Complete</h2>
-				<div class="p2">Check back for updates.</div>
-				<img src="img/projects_main2.png" class="img-responsive">
-			</div>
-		</div>
-	</section>	    
+  <!-- Third Party JS -->
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <?php include "_/php_includes/pages_footer.php";?>
+  <!-- Contact Form JavaScript -->
+  <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+  <script type="text/javascript" src="js/contact_me.js"></script>
 
-<?php include "_/php_includes/scripts.php";?>
+  <!-- Custom JS -->
+  <script type="text/javascript" src="js/scripts.js"></script>
+
+  <!-- clock time from http://www.ricocheting.com/code/javascript/html-generator/date-time-clock -->
+  <script type="text/javascript">
+
+  	function GetClock(){
+  	d = new Date();
+  	nhour  = d.getHours();
+  	nmin   = d.getMinutes();
+  	     if(nhour ==  0) {ap = " AM";nhour = 12;}
+  	else if(nhour <= 11) {ap = " AM";}
+  	else if(nhour == 12) {ap = " PM";}
+  	else if(nhour >= 13) {ap = " PM";nhour -= 12;}
+
+  	if(nmin <= 9) {nmin = "0" +nmin;}
+
+
+  	document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+ap+"";
+  	setTimeout("GetClock()", 1000);
+  	}
+  	window.onload=GetClock;
+
+  </script>
+
+  <!-- Google Analytics -->
+  <script>
+
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-44209755-1', 'auto');
+  	ga('send', 'pageview');
+
+  </script>
 
 </body>
 </html>
