--- a/about.html
+++ b/about.html
@@ -2,71 +2,238 @@
 <html lang="en" class="no-js">
 
 <head>
-	<?php include "_/php_includes/head_1.php";?>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <!--Facebook Meta Data -->
-    <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
-    <!--<meta property="og:type" content="article" />-->
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image" content="http://www.tiafaupurcell.me/img/fb_metadata_about.jpg" /><!--insert image 1200x630-->
-    <meta property="og:image:width" content="2000"/><!--min 1200px-->
-    <meta property="og:image:height" content="1050"/><!--min 630px-->
-    <meta property="og:url" content="http://www.tiafaupurcell.me/about.php" />
-    <meta property="og:description" content="Hi, I'm Tiafau Purcell — a third generation pig farmer. Just kidding. I'm passionate about design, technology, and startups. I'm a user experience and interaction designer."/>
+	<!--Facebook Meta Data -->
+	<meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
+	<!--<meta property="og:type" content="article" />-->
+	<meta property="og:image:type" content="image/jpeg"/>
+	<meta property="og:image" content="http://tiafaupurcell.github.io/img/fb_metadata_about.jpg" /><!--insert image 1200x630-->
+	<meta property="og:image:width" content="2000"/><!--min 1200px-->
+	<meta property="og:image:height" content="1050"/><!--min 630px-->
+	<meta property="og:url" content="http://tiafaupurcell.github.io/about.html" />
+	<meta property="og:description" content="Hi, I'm Tiafau Purcell — a third generation pig farmer. Just kidding. I'm passionate about design, technology, and startups. I'm a user experience and interaction designer."/>
 
-    <?php include "_/php_includes/head_2.php";?>
+	<!-- Bootstrap Core CSS -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <title>About | User Experience &amp; Interaction Designer</title>
+	<!-- Custom CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Third Party CSS -->
+	<link rel="stylesheet" type="text/css" src="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
+
+	<!-- Custom Fonts -->
+	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
+	<!-- Favicon -->
+	<link rel="shortcut icon" type="text/css" href="img/favicon.ico"/>
+
+	<title>About | User Experience &amp; Interaction Designer</title>
 </head>
 
 <body id="about">
+	<header>
+		<nav id="pages-nav" class="animated bounceInDown">
+			<div class="container">
+				<div class="col-md-4 col-sm-4 col-xs-4 text-left">
+					<a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+				</div>
+				<div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
+				<div class="col-md-4 col-sm-4 col-xs-4 text-right">
+					<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+				</div>
+			</div>
+		</nav>
+	</header>
 
-    <?php include "_/php_includes/pages_nav.php";?>
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+				<img src="img/me_icon.svg" class="img-responsive border">
+  		</div>
+  	</div>
+  </section>
 
-    <section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/me_icon.svg" class="img-responsive border">
-    		</div>
-    	</div>
-    </section>
+  <section class="section-main blue_a section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h1>About</h1>
+  			<p>Hi, I'm Tiafau Purcell &mdash; a third generation pig farmer. Just kidding. But my last name does <a href="http://en.wikipedia.org/wiki/Purcell_(surname)" target="_blank">mean</a> pig farmer or those whose occupation was swineherd.
+  				I'm originally from Laie, Hawaii and now reside in Provo, Utah with my family. I'm passionate about design, technology, and startups. I'm a user experience and interaction designer. I love designing and building
+  				beautiful web and mobile experiences. Designing user interfaces and products that people truly enjoy is what inspires me to do what I do.</p>
+  			<img src="img/about_main.png" class="img-responsive">
+  			<div class="caption">My home away from home.</div>
+  		</div>
+  	</div>
+  </section>
 
-    <section class="section-main blue_a section-img">
-    	<div class="container animated fadeIn">
-    		<div class="row text-center">
-    			<h1>About</h1>
-    			<p>Hi, I'm Tiafau Purcell &mdash; a third generation pig farmer. Just kidding. But my last name does <a href="http://en.wikipedia.org/wiki/Purcell_(surname)" target="_blank">mean</a> pig farmer or those whose occupation was swineherd. 
-    				I'm originally from Laie, Hawaii and now reside in Provo, Utah with my family. I'm passionate about design, technology, and startups. I'm a user experience and interaction designer. I love designing and building 
-    				beautiful web and mobile experiences. Designing user interfaces and products that people truly enjoy is what inspires me to do what I do.</p>
-    			<img src="img/about_main.png" class="img-responsive">
-    			<div class="caption">My home away from home.</div>
-    		</div>
-    	</div>
-    </section>
+	<section class="about_family blue_a section-margin bg-light-gray">
+		<div class="container animated fadeIn">
+			<div class="row text-center">
+				<h2>The Family</h2>
+				<div class="p2">Meet the Purcell crew. This is what life's really all about. This is my team, my motivation, my inspiration.</div>
+				<div class="about_family_avatars col-md-8 col-md-offset-2">
+					<div class="col-md-3 col-sm-3">
+						<img src="img/about_marie.png" class="img-responsive">
+						<div class="about_family_name">Marie</div>
+					</div>
+					<div class="col-md-3 col-sm-3">
+						<img src="img/about_adelyn.png" class="img-responsive">
+						<div class="about_family_name">Adelyn</div>
+					</div>
+					<div class="col-md-3 col-sm-3">
+						<img src="img/about_avery.png" class="img-responsive">
+						<div class="about_family_name">Avery</div>
+					</div>
+					<div class="col-md-3 col-sm-3">
+						<img src="img/about_christian.png" class="img-responsive">
+						<div class="about_family_name">Christian</div>
+					</div>
+				</div>
 
-	<?php include "_/php_includes/about_family.php";?>
+				<div class="about_family_profiles">
+					<div class="padding col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2">
+						<div class="about_family_profiles2 col-md-5 col-sm-5">
+							<h3>Marie</h3>
+							<div class="p3">Where do I begin? Marie is my right-hand and my left-hand. What can't she do? Besides being an amazing wife and mother, Marie is my favorite entrepreneur.
+								She started an online baby girl clothing company called <a href="https://www.littlemissbasics.com/" target="_blank">Little Miss Basics</a> and has since sold it. She finds a way to do it all.
+							</div>
+						</div>
+						<div class="col-md-5 col-sm-5">
+							<img src="img/about_marie2.png" class="img-responsive">
+						</div>
+					</div>
+					<div class="border_sm"></div>
+
+					<div class="padding col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2">
+						<div class="col-md-5 col-sm-5">
+							<img src="img/about_adelyn2.png" class="img-responsive">
+						</div>
+						<div class="about_family_profiles2 col-md-5 col-sm-5">
+							<h3>Adelyn</h3>
+							<div class="p3">The firstborn. Adelyn likes to talk &mdash; a lot. Sometimes you will hear her giving orders to Avery and Christian. But she loves to play with her siblings
+								and makes sure they are taken care of. Adelyn also enjoys to sing and dance. When Adelyn isn't playing, she's singing or dancing &mdash; and vice versa.
+							</div>
+						</div>
+					</div>
+					<div class="border_sm"></div>
+
+					<div class="padding col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2">
+						<div class="about_family_profiles2 col-md-5 col-sm-5">
+							<h3>Avery</h3>
+							<div class="p3">Six minutes after Adelyn was born, Avery decided to join us. She enjoys singing loudly and dancing. She is taking a dance class with Marie and learning
+								the basics of ballet. When she's not singing or dancing, you can find her snitching a cookie from the cookie jar.
+							</div>
+						</div>
+						<div class="col-md-5 col-sm-5">
+							<img src="img/about_avery2.png" class="img-responsive">
+						</div>
+					</div>
+					<div class="border_sm"></div>
+
+					<div class="padding no_padding col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2">
+						<div class="col-md-5 col-sm-5">
+							<img src="img/about_christian2.png" class="img-responsive">
+						</div>
+						<div class="about_family_profiles2 col-md-5 col-sm-5">
+							<h3>Christian</h3>
+							<div class="p3">Man of the house. Christian is the one who keeps us in line. He loves his older sisters and always wants to be with them. Christian likes <a href="https://youtu.be/vSYadh2xmcI" target="_blank">Elmo</a>, grasshoppers,
+								and balls. Right now, I'm trying to get him to love playing soccer &mdash; CT7. Christian also loves to read books, especially ones with animals.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/me_icon.svg" class="img-responsive border">
-    		</div>
-    	</div>
-    </section>
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/me_icon.svg" class="img-responsive border">
+  		</div>
+  	</div>
+  </section>
 
 	<section class="blue_a">
 		<div class="container animated fadeIn section-img">
 			<div class="row text-center">
 				<h2>Fin</h2>
-				<div class="p2">Thanks for reading and getting to know me a little more. Check out my other pages including my <a href="work.php">work</a> and <a href="ventures.php">ventures</a> or my <a href="readlist.php">recommended books</a> and <a href="music.php">favorite music</a>.</div>
+				<div class="p2">Thanks for reading and getting to know me a little more. Check out my other pages including my <a href="work.html">work</a> and <a href="ventures.html">ventures</a> or my <a href="readlist.html">recommended books</a> and <a href="music.html">favorite music</a>.</div>
 				<img src="img/about_main2.png" class="img-responsive">
 			</div>
 		</div>
 	</section>
 
-	<?php include "_/php_includes/pages_footer.php";?>	
+	<div class="footer">
+		<nav id="pages-footer" class="animated fadeIn">
+	    <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="copy">&copy; 2016</div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+	    </div>
+		</nav>
+	</div>
 
-<?php include "_/php_includes/scripts.php";?>
+	<!-- jQuery -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+	<!-- Bootstrap Core JS -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+	<!-- Third Party JS -->
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+	<!-- Contact Form JavaScript -->
+	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+	<script type="text/javascript" src="js/contact_me.js"></script>
+
+	<!-- Custom JS -->
+	<script type="text/javascript" src="js/scripts.js"></script>
+
+	<!-- clock time from http://www.ricocheting.com/code/javascript/html-generator/date-time-clock -->
+	<script type="text/javascript">
+
+		function GetClock(){
+		d = new Date();
+		nhour  = d.getHours();
+		nmin   = d.getMinutes();
+		     if(nhour ==  0) {ap = " AM";nhour = 12;}
+		else if(nhour <= 11) {ap = " AM";}
+		else if(nhour == 12) {ap = " PM";}
+		else if(nhour >= 13) {ap = " PM";nhour -= 12;}
+
+		if(nmin <= 9) {nmin = "0" +nmin;}
+
+
+		document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+ap+"";
+		setTimeout("GetClock()", 1000);
+		}
+		window.onload=GetClock;
+
+	</script>
+
+	<!-- Google Analytics -->
+	<script>
+
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-44209755-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 
 </body>
 </html>
