--- a/index.html
+++ b/index.html
@@ -2,30 +2,246 @@
 <html lang="en" class="no-js">
 
 <head>
-	<?php include "_/php_includes/head_1.php";?>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <!--Facebook Meta Data -->
-    <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
-    <!--<meta property="og:type" content="article" />-->
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image" content="http://www.tiafaupurcell.me/img/fb_metadata_home.jpg" /><!--insert image 1200x630-->
-    <meta property="og:image:width" content="2000"/><!--min 1200px-->
-    <meta property="og:image:height" content="1050"/><!--min 630px-->
-    <meta property="og:url" content="http://www.tiafaupurcell.me" />
-    <meta property="og:description" content="Web &amp; mobile UX/UI designer."/>
+  <!--Facebook Meta Data -->
+  <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
+  <!--<meta property="og:type" content="article" />-->
+  <meta property="og:image:type" content="image/jpeg"/>
+  <meta property="og:image" content="http://tiafaupurcell.github.io/img/fb_metadata_home.jpg" /><!--insert image 1200x630-->
+  <meta property="og:image:width" content="2000"/><!--min 1200px-->
+  <meta property="og:image:height" content="1050"/><!--min 630px-->
+  <meta property="og:url" content="http://tiafaupurcell.github.io/" />
+  <meta property="og:description" content="Web &amp; mobile UX/UI designer."/>
 
-    <?php include "_/php_includes/head_2.php";?>
+	<!-- Bootstrap Core CSS -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <title>Tiafau Purcell | User Experience &amp; Interaction Designer</title>
+	<!-- Custom CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Third Party CSS -->
+	<link rel="stylesheet" type="text/css" src="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
+
+	<!-- Custom Fonts -->
+	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
+	<!-- Favicon -->
+	<link rel="shortcut icon" type="text/css" href="img/favicon.ico"/>
+
+  <title>Tiafau Purcell | User Experience &amp; Interaction Designer</title>
 </head>
 
 <body id="home">
+	<nav class="animated bounceInDown">
+    <div class="container">
+      <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+      </div>
+      <div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
+      <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+      	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+      </div>
+    </div>
+	</nav>
 
-    <?php include "_/php_includes/home_nav.php";?>
-    <?php include "_/php_includes/home_body.php";?>
-    <?php include "_/php_includes/home_footer.php";?>
+	<section class="app-body">
+		<div class="container">
+			<div class="row app-row-first animated bounceIn">
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="about.html">
+						<img src="img/me_icon.svg" class="img-responsive">
+						<p>About</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="photos.html">
+						<img src="img/photos_icon.png" class="img-responsive">
+						<p>Photos</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="music.html">
+						<img src="img/music_icon.svg" class="img-responsive">
+						<p>Music</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="apps.html">
+						<img src="img/appstore_soon_icon.svg" class="img-responsive">
+						<p>Apps</p>
+					</a>
+				</div>
+			</div><!-- .row -->
 
-<?php include "_/php_includes/scripts.php";?>
+			<div class="row app-row animated bounceIn">
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="work.html">
+						<img src="img/work_icon.svg" class="img-responsive">
+						<p>Work</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="ventures.html">
+						<img src="img/projects_icon.svg" class="img-responsive">
+						<p>Ventures</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="wishlist.html">
+						<img src="img/wishlist_icon.svg" class="img-responsive">
+						<p>Wishlist</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="readlist.html">
+						<img src="img/readlist_icon.svg" class="img-responsive">
+						<p>Readlist</p>
+					</a>
+				</div>
+			</div><!-- .row -->
+
+			<div class="row app-row animated bounceIn">
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://www.facebook.com/tiafau.a.purcell" target="_blank">
+						<img src="img/facebook_icon.png" class="img-responsive">
+						<p>Facebook</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://twitter.com/tiafaupurcell" target="_blank">
+						<img src="img/twitter_icon.png" class="img-responsive">
+						<p>Twitter</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://instagram.com/tiafaupurcell" target="_blank">
+						<img src="img/instagram_icon.png" class="img-responsive">
+						<p>Instagram</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://www.youtube.com/channel/UCd3BaRdReI9U7KKbeFNEbig/" target="_blank">
+						<img src="img/youtube_icon.png" class="img-responsive">
+						<p>YouTube</p>
+					</a>
+				</div>
+			</div><!-- .row -->
+
+			<div class="row app-row-last animated bounceIn">
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://www.linkedin.com/pub/tiafau-purcell/7a/834/8b6" target="_blank">
+						<img src="img/linkedin_icon.png" class="img-responsive">
+						<p>LinkedIn</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://www.pinterest.com/tiafaupurcell/" target="_blank">
+						<img src="img/pinterest_icon.png" class="img-responsive">
+						<p>Pinterest</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://medium.com/@tiafau.purcell" target="_blank">
+						<img src="img/medium_icon.png" class="img-responsive">
+						<p>Medium</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="store.html">
+						<img src="img/shop_soon_icon.svg" class="img-responsive">
+						<p>Store</p>
+					</a>
+				</div>
+			</div><!-- .row -->
+		</div><!-- .container -->
+	</section>
+
+	<footer class="app-footer">
+		<div class="container">
+			<div class="row app-footer-row animated bounceIn">
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="mailto:tiafaupurcell03@gmail.com" target="_blank">
+						<img src="img/gmail_icon.png" class="img-responsive">
+						<p>Gmail</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="messages.html">
+						<img src="img/messages_icon.svg" class="img-responsive">
+						<p>Messages</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="https://plus.google.com/105412208131448973310/" target="_blank">
+						<img src="img/hangouts_icon.png" class="img-responsive">
+						<p>Hangouts</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-sm-3 col-xs-3">
+					<a href="slack.html">
+						<img src="img/slack_icon.png" class="img-responsive">
+						<p>Slack</p>
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<!-- jQuery -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+	<!-- Bootstrap Core JS -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+	<!-- Third Party JS -->
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+	<!-- Contact Form JavaScript -->
+	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+	<script type="text/javascript" src="js/contact_me.js"></script>
+
+	<!-- Custom JS -->
+	<script type="text/javascript" src="js/scripts.js"></script>
+
+	<!-- clock time from http://www.ricocheting.com/code/javascript/html-generator/date-time-clock -->
+	<script type="text/javascript">
+
+		function GetClock(){
+		d = new Date();
+		nhour  = d.getHours();
+		nmin   = d.getMinutes();
+		     if(nhour ==  0) {ap = " AM";nhour = 12;}
+		else if(nhour <= 11) {ap = " AM";}
+		else if(nhour == 12) {ap = " PM";}
+		else if(nhour >= 13) {ap = " PM";nhour -= 12;}
+
+		if(nmin <= 9) {nmin = "0" +nmin;}
+
+
+		document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+ap+"";
+		setTimeout("GetClock()", 1000);
+		}
+		window.onload=GetClock;
+
+	</script>
+
+	<!-- Google Analytics -->
+	<script>
+
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-44209755-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 
 </body>
 </html>
