--- a/readlist.html
+++ b/readlist.html
@@ -2,71 +2,247 @@
 <html lang="en" class="no-js">
 
 <head>
-    <?php include "_/php_includes/head_1.php";?>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <!--Facebook Meta Data -->
-    <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
-    <!--<meta property="og:type" content="article" />-->
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image" content="http://www.tiafaupurcell.me/img/fb_metadata_readlist.jpg" /><!--insert image 1200x630-->
-    <meta property="og:image:width" content="2000"/><!--min 1200px-->
-    <meta property="og:image:height" content="1050"/><!--min 630px-->
-    <meta property="og:url" content="http://www.tiafaupurcell.me/readlist.php" />
-    <meta property="og:description" content="I've never been an avid reader, but lately I've tried to make more of an effort to read more good books. Here's a list of books I've recently read or I'm currently reading or listening to."/>
+  <!--Facebook Meta Data -->
+  <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
+  <!--<meta property="og:type" content="article" />-->
+  <meta property="og:image:type" content="image/jpeg"/>
+  <meta property="og:image" content="http://tiafaupurcell.github.io/img/fb_metadata_readlist.jpg" /><!--insert image 1200x630-->
+  <meta property="og:image:width" content="2000"/><!--min 1200px-->
+  <meta property="og:image:height" content="1050"/><!--min 630px-->
+  <meta property="og:url" content="http://tiafaupurcell.github.io/readlist.html" />
+  <meta property="og:description" content="I've never been an avid reader, but lately I've tried to make more of an effort to read more good books. Here's a list of books I've recently read or I'm currently reading or listening to."/>
 
-    <?php include "_/php_includes/head_2.php";?>
+  <!-- Bootstrap Core CSS -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <title>Read List | User Experience &amp; Interaction Designer</title>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- Third Party CSS -->
+  <link rel="stylesheet" type="text/css" src="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+  <link rel="stylesheet" type="text/css" href="css/animate.css"/>
+
+  <!-- Custom Fonts -->
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="text/css" href="img/favicon.ico"/>
+
+  <title>Read List | User Experience &amp; Interaction Designer</title>
 </head>
 
 <body id="about">
-
-    <?php include "_/php_includes/pages_nav.php";?>
-
-    <section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/readlist_icon.svg" class="img-responsive">
-    		</div>
-    	</div>
-    </section>
-
-    <section class="section-main blue_a section-img">
-    	<div class="container animated fadeIn">
-    		<div class="row text-center">
-    			<h1>Read List</h1>
-    			<p>I've never been an avid reader, but lately I've tried to make more of an effort to read more good books. Mark Twain once said, "The man who does not read good books has no advantage over the man who can't read."
-    				Here's a list of books I've recently read or I'm currently reading or listening to.</p>
-    				<img src="img/readlist_main.png" class="img-responsive">
-    			<div class="caption"><a href="https://itunes.apple.com/us/app/book-mormon-another-testament/id547313550?mt=8" target="_blank">The Book of Mormon: Another Testament of Jesus Christ</a> <br/>is the book I recommend for everyone. It's the best book one will ever read.</div>
-    		</div>
-    	</div>
-    </section>
-
-	<?php include "_/php_includes/readlist_business.php";?>
-    <?php /* include "_/php_includes/readlist_misc.php"; */ ?>
-
-    <section class="section-icon2 animated bounceIn">
-        <div class="container">
-            <div class="row">
-                <img src="img/readlist_icon.svg" class="img-responsive border">
-            </div>
+  <header>
+  	<nav id="pages-nav" class="animated bounceInDown">
+      <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
         </div>
-    </section>
-
-    <section class="blue_a">
-        <div class="container animated fadeIn section-img">
-            <div class="row text-center">
-                <h2>The End</h2>
-                <div class="p2">There aren't a lot of books in my collection but stay tuned and I will add more to it.</div>
-                <img src="img/readlist_main2.png" class="img-responsive">
-            </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
         </div>
-    </section>    
+      </div>
+  	</nav>
+  </header>
 
-    <?php include "_/php_includes/pages_footer.php";?>
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/readlist_icon.svg" class="img-responsive">
+  		</div>
+  	</div>
+  </section>
 
-<?php include "_/php_includes/scripts.php";?>
+  <section class="section-main blue_a section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h1>Read List</h1>
+  			<p>I've never been an avid reader, but lately I've tried to make more of an effort to read more good books. Mark Twain once said, "The man who does not read good books has no advantage over the man who can't read."
+  				Here's a list of books I've recently read or I'm currently reading or listening to.</p>
+  				<img src="img/readlist_main.png" class="img-responsive">
+  			<div class="caption"><a href="https://itunes.apple.com/us/app/book-mormon-another-testament/id547313550?mt=8" target="_blank">The Book of Mormon: Another Testament of Jesus Christ</a> <br/>is the book I recommend for everyone. It's the best book one will ever read.</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section-margin bg-light-gray">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Business</h2>
+  			<div class="p2">This is a collection of books about business, startups, technology, and entrepreneurship.</div>
+
+  			<div class="column">
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/leadership-self-deception/id365410805" target="_blank">
+  						<img src="img/leadership_book.png" class="img-responsive">
+  						<div class="p2">Leadership...</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/who-moved-my-cheese/id403605836" target="_blank">
+  						<img src="img/cheese_book.png" class="img-responsive">
+  						<div class="p2">...Cheese?</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/becoming-steve-jobs/id936502684" target="_blank">
+  						<img src="img/stevejobs_book.png" class="img-responsive">
+  						<div class="p2">...Steve Jobs</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/audiobook/traction-startup-guide-to/id927591589" target="_blank">
+  						<img src="img/traction_book.png" class="img-responsive">
+  						<div class="p2">Traction</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/rework/id421026168" target="_blank">
+  						<img src="img/rework_book.png" class="img-responsive">
+  						<div class="p2">Rework</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/hard-thing-about-hard-things/id668832574" target="_blank">
+  						<img src="img/hardthings_book.png" class="img-responsive">
+  						<div class="p2">...Hard Things</div>
+  					</a>
+  				</div>
+  				<div class="xs-padding-30 col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/zero-to-one/id795977428" target="_blank">
+  						<img src="img/zeroone_book.png" class="img-responsive">
+  						<div class="p2">Zero to One</div>
+  					</a>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <!--<section class="section-margin">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Other Books</h2>
+  			<div class="p2">This is a collection of other good books I recommend.</div>
+
+  			<div class="column">
+  				<div class="column-row col-md-3 col-sm-3 col-xs-6">
+  					<a href="" target="_blank">
+  						<img src="img/" class="img-responsive">
+  						<div class="p2">Book</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-6">
+  					<a href="" target="_blank">
+  						<img src="img/" class="img-responsive">
+  						<div class="p2">Book</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-6">
+  					<a href="" target="_blank">
+  						<img src="img/" class="img-responsive">
+  						<div class="p2">Book</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-6">
+  					<a href="" target="_blank">
+  						<img src="img/" class="img-responsive">
+  						<div class="p2">Book</div>
+  					</a>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>-->
+
+  <section class="section-icon2 animated bounceIn">
+      <div class="container">
+          <div class="row">
+              <img src="img/readlist_icon.svg" class="img-responsive border">
+          </div>
+      </div>
+  </section>
+
+  <section class="blue_a">
+      <div class="container animated fadeIn section-img">
+          <div class="row text-center">
+              <h2>The End</h2>
+              <div class="p2">There aren't a lot of books in my collection but stay tuned and I will add more to it.</div>
+              <img src="img/readlist_main2.png" class="img-responsive">
+          </div>
+      </div>
+  </section>
+
+  <div class="footer">
+  	<nav id="pages-footer" class="animated fadeIn">
+	    <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="copy">&copy; 2016</div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+	    </div>
+  	</nav>
+  </div>
+
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <!-- Bootstrap Core JS -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+  <!-- Third Party JS -->
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+  <!-- Contact Form JavaScript -->
+  <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+  <script type="text/javascript" src="js/contact_me.js"></script>
+
+  <!-- Custom JS -->
+  <script type="text/javascript" src="js/scripts.js"></script>
+
+  <!-- clock time from http://www.ricocheting.com/code/javascript/html-generator/date-time-clock -->
+  <script type="text/javascript">
+
+  	function GetClock(){
+  	d = new Date();
+  	nhour  = d.getHours();
+  	nmin   = d.getMinutes();
+  	     if(nhour ==  0) {ap = " AM";nhour = 12;}
+  	else if(nhour <= 11) {ap = " AM";}
+  	else if(nhour == 12) {ap = " PM";}
+  	else if(nhour >= 13) {ap = " PM";nhour -= 12;}
+
+  	if(nmin <= 9) {nmin = "0" +nmin;}
+
+
+  	document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+ap+"";
+  	setTimeout("GetClock()", 1000);
+  	}
+  	window.onload=GetClock;
+
+  </script>
+
+  <!-- Google Analytics -->
+  <script>
+
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-44209755-1', 'auto');
+  	ga('send', 'pageview');
+
+  </script>
 
 </body>
 </html>
