--- a/wishlist.html
+++ b/wishlist.html
@@ -2,74 +2,231 @@
 <html lang="en" class="no-js">
 
 <head>
-    <?php include "_/php_includes/head_1.php";?>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <!--Facebook Meta Data -->
-    <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
-    <!--<meta property="og:type" content="article" />-->
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image" content="http://www.tiafaupurcell.me/img/fb_metadata_wishlist.jpg" /><!--insert image 1200x630-->
-    <meta property="og:image:width" content="2000"/><!--min 1200px-->
-    <meta property="og:image:height" content="1050"/><!--min 630px-->
-    <meta property="og:url" content="http://www.tiafaupurcell.me/wishlist.php" />
-    <meta property="og:description" content="Have you ever wanted to climb Mount Everest? How about visiting the Great Wall of China? I actually don't think I'd wish to climb Everest but I have been to the Great Wall. Here are a few of the things on my wish list."/>
+  <!--Facebook Meta Data -->
+  <meta property="og:title" content="Tiafau Purcell | User Experience &amp; Interaction Designer" />
+  <!--<meta property="og:type" content="article" />-->
+  <meta property="og:image:type" content="image/jpeg"/>
+  <meta property="og:image" content="http://tiafaupurcell.github.io/img/fb_metadata_wishlist.jpg" /><!--insert image 1200x630-->
+  <meta property="og:image:width" content="2000"/><!--min 1200px-->
+  <meta property="og:image:height" content="1050"/><!--min 630px-->
+  <meta property="og:url" content="http://tiafaupurcell.github.io/wishlist.html" />
+  <meta property="og:description" content="Have you ever wanted to climb Mount Everest? How about visiting the Great Wall of China? I actually don't think I'd wish to climb Everest but I have been to the Great Wall. Here are a few of the things on my wish list."/>
 
-    <?php include "_/php_includes/head_2.php";?>
+  <!-- Bootstrap Core CSS -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <title>Wish List | User Experience &amp; Interaction Designer</title>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- Third Party CSS -->
+  <link rel="stylesheet" type="text/css" src="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+  <link rel="stylesheet" type="text/css" href="css/animate.css"/>
+
+  <!-- Custom Fonts -->
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="text/css" href="img/favicon.ico"/>
+
+  <title>Wish List | User Experience &amp; Interaction Designer</title>
 </head>
 
 <body id="about">
+  <header>
+  	<nav id="pages-nav" class="animated bounceInDown">
+      <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+      </div>
+  	</nav>
+  </header>
 
-    <?php include "_/php_includes/pages_nav.php";?>
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/wishlist_icon.svg" class="img-responsive">
+  		</div>
+  	</div>
+  </section>
 
-    <section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/wishlist_icon.svg" class="img-responsive">
-    		</div>
+  <section class="section-main blue_a section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h1>Wish List</h1>
+  			<p>Have you ever wanted to climb Mount Everest? How about visiting the Great Wall of China? I actually don't think I'd wish to climb
+  				Everest but I have been to the Great Wall. Here are a few of the things on my wish list.
+  			</p>
+  			<img src="img/wishlist_main.png" class="img-responsive">
+  			<div class="caption"><a href="https://www.youtube.com/watch?v=XfbHnAu2ILs" target="_blank">Snowboarding</a> with Travis Rice.</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section_detail bg-light-gray section-margin section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>People to Meet</h2>
+  			<div class="p2">Here are some people I'd like to meet.</div>
+
+  			<div class="col-md-12">
+  				<img src="img/wishlist_1.jpg" class="img-responsive">
+  				<div class="logo_center caption">Michael Jordan</div>
+
+  				<img src="img/wishlist_2.jpg" class="img-responsive">
+  				<div class="logo_center caption">Muhammad Ali</div>
+
+  				<img src="img/wishlist_3.jpg" class="img-responsive">
+  				<div class="logo_center caption">Mark Zuckerberg</div>
+
+  				<img src="img/wishlist_4.jpg" class="img-responsive">
+  				<div class="logo_center caption">Bill Gates</div>
+
+  				<img src="img/wishlist_5.jpg" class="img-responsive">
+  				<div class="logo_center caption">Bruno Mars</div>
+
+  				<img src="img/wishlist_6.jpg" class="img-responsive">
+  				<div class="logo_center caption">Dwayne "The Rock" Johnson</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section_detail section-margin section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Events to Attend</h2>
+  			<div class="p2">Here are some events I'd like to go to.</div>
+
+  			<div class="col-md-12">
+  				<img src="img/wishlist_7.jpg" class="img-responsive">
+  				<div class="logo_center caption">Apple WWDC</div>
+
+  				<img src="img/wishlist_8.jpg" class="img-responsive">
+  				<div class="logo_center caption">World Cup</div>
+
+  				<img src="img/wishlist_9.jpg" class="img-responsive">
+  				<div class="logo_center caption">NBA Finals</div>
+
+  				<img src="img/wishlist_10.jpg" class="img-responsive">
+  				<div class="logo_center caption">Olympics</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section_detail bg-light-gray section-margin section-img">
+  	<div class="container animated fadeIn">
+  		<div class="row text-center">
+  			<h2>Other Stuff</h2>
+  			<div class="p2">Here are some other things I'd like to do.</div>
+
+  			<div class="col-md-12">
+  				<img src="img/wishlist_11.jpg" class="img-responsive">
+  				<div class="logo_center caption">Drive a Lamborghini (or own one ;))</div>
+
+  				<img src="img/wishlist_12.jpg" class="img-responsive">
+  				<div class="logo_center caption">Visit the White House (and then play soccer with the President)</div>
+
+  				<img src="img/wishlist_13.jpg" class="img-responsive">
+  				<div class="logo_center caption">Take a selfie with Ellen (or any of these people :))</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <section class="section-icon2 animated bounceIn">
+  	<div class="container">
+  		<div class="row">
+  			<img src="img/wishlist_icon.svg" class="img-responsive border">
+  		</div>
+  	</div>
+  </section>
+
+  <section class="blue_a">
+    <div class="container animated fadeIn section-img">
+    	<div class="row text-center">
+    		<h2>Final Wish</h2>
+    		<div class="p2">It's a good thing there isn't a three-wishes-limit or I'd be in trouble. If you can make any of these wishes come true,
+    		let me know and I will make you cookies in return. Really though, helping me with this won't nearly be as hard as climbing Everest.</div>
+    		<img src="img/wishlist_main2.png" class="img-responsive">
     	</div>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-main blue_a section-img">
-    	<div class="container animated fadeIn">
-    		<div class="row text-center">
-    			<h1>Wish List</h1>
-    			<p>Have you ever wanted to climb Mount Everest? How about visiting the Great Wall of China? I actually don't think I'd wish to climb 
-    				Everest but I have been to the Great Wall. Here are a few of the things on my wish list.
-    			</p>
-    			<img src="img/wishlist_main.png" class="img-responsive">
-    			<div class="caption"><a href="https://www.youtube.com/watch?v=XfbHnAu2ILs" target="_blank">Snowboarding</a> with Travis Rice.</div>
-    		</div>
-    	</div>
-    </section>
+  <div class="footer">
+  	<nav id="pages-footer" class="animated fadeIn">
+	    <div class="container">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-left">
+          <a href="http://tiafaupurcell.github.io/">Tia Purcell</a>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4" id="copy">&copy; 2016</div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+        	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+        </div>
+	    </div>
+  	</nav>
+  </div>
 
-	<?php include "_/php_includes/wishlist_people.php";?>
-	<?php include "_/php_includes/wishlist_events.php";?>
-	<?php include "_/php_includes/wishlist_misc.php";?>
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-	<section class="section-icon2 animated bounceIn">
-    	<div class="container">
-    		<div class="row">
-    			<img src="img/wishlist_icon.svg" class="img-responsive border">
-    		</div>
-    	</div>
-    </section>
+  <!-- Bootstrap Core JS -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-	<section class="blue_a">
-		<div class="container animated fadeIn section-img">
-			<div class="row text-center">
-				<h2>Final Wish</h2>
-				<div class="p2">It's a good thing there isn't a three-wishes-limit or I'd be in trouble. If you can make any of these wishes come true, 
-				let me know and I will make you cookies in return. Really though, helping me with this won't nearly be as hard as climbing Everest.</div>
-				<img src="img/wishlist_main2.png" class="img-responsive">
-			</div>
-		</div>
-	</section>	    
+  <!-- Third Party JS -->
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <?php include "_/php_includes/pages_footer.php";?>
+  <!-- Contact Form JavaScript -->
+  <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+  <script type="text/javascript" src="js/contact_me.js"></script>
 
-<?php include "_/php_includes/scripts.php";?>
+  <!-- Custom JS -->
+  <script type="text/javascript" src="js/scripts.js"></script>
+
+  <!-- clock time from http://www.ricocheting.com/code/javascript/html-generator/date-time-clock -->
+  <script type="text/javascript">
+
+  	function GetClock(){
+  	d = new Date();
+  	nhour  = d.getHours();
+  	nmin   = d.getMinutes();
+  	     if(nhour ==  0) {ap = " AM";nhour = 12;}
+  	else if(nhour <= 11) {ap = " AM";}
+  	else if(nhour == 12) {ap = " PM";}
+  	else if(nhour >= 13) {ap = " PM";nhour -= 12;}
+
+  	if(nmin <= 9) {nmin = "0" +nmin;}
+
+
+  	document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+ap+"";
+  	setTimeout("GetClock()", 1000);
+  	}
+  	window.onload=GetClock;
+
+  </script>
+
+  <!-- Google Analytics -->
+  <script>
+
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-44209755-1', 'auto');
+  	ga('send', 'pageview');
+
+  </script>
 
 </body>
 </html>
